[package]
name = "router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio ={ version = "1.12", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
serde_yaml = "0.9"
thiserror = "1.0"
