[package]
name = "cloud_wakeup"
version = "0.1.0"
authors = ["Rainer Stropek <rainer@software-architects.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.33"
oauth2 = "^2.0"
reqwest = "^0.9"
url = "^1.0"
serde = "^1.0"
base64 = "^0.12"
serde_json = "^1.0"
