[package]
name = "axum-di"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
axum-macros = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
rstest = "0.16"
mockall = "0.11"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "0.14", features = ["full"] }
