[package]
name = "recipe_reader"
version = "0.1.0"
edition = "2021"

[features]
default = ["json"]
all = ["json", "yaml"]
json = ["dep:serde_json"]
yaml = ["dep:serde_yaml"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
serde_yaml = { version = "0", optional = true }
anyhow = "1"

[dev-dependencies]
mockall = "0"
