[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3", features = ["device"] }
nrf52833-pac = { version = "0.12.2", features = ["rt"] }
panic-halt = "1.0.0"
rtt-target = "0.5.0"
