[package]
name = "todo-worker"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0"
worker = "0.0.14"
serde_json = "1.0.67"
serde = { version = "1", features = ["derive"] }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
word_puzzle_generator = { path = "../word_puzzle_generator" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
